<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buttons.Button6"
    android:background="@color/white"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_nav"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inp_1"
                android:layout_marginTop="45dp"
                android:textSize="18sp"
                android:text="@string/btn_inp_1_t4"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                />
            <EditText
                android:id="@+id/btn6_input_1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/inp_1"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:paddingLeft="20dp"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inp_2"
                android:layout_below="@+id/btn6_input_1"
                android:textSize="18sp"
                android:text="@string/btn_inp_2_t4"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                />
            <EditText
                android:id="@+id/btn6_input_2"
                android:layout_width="match_parent"
                android:layout_below="@+id/inp_2"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inp_3"
                android:layout_below="@+id/btn6_input_2"
                android:textSize="18sp"
                android:text="@string/btn_inp_3_t4"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                />
            <EditText
                android:id="@+id/btn6_input_3"
                android:layout_width="match_parent"
                android:layout_below="@+id/inp_3"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inp_4"
                android:layout_below="@+id/btn6_input_3"
                android:textSize="18sp"
                android:text="@string/btn_inp_4_t4"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                />
            <EditText
                android:id="@+id/btn6_input_4"
                android:layout_width="match_parent"
                android:layout_below="@+id/inp_4"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inp_5"
                android:layout_below="@+id/btn6_input_4"
                android:textSize="18sp"
                android:text="@string/btn_inp_5_t4"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                />
            <EditText
                android:id="@+id/btn6_input_5"
                android:layout_width="match_parent"
                android:layout_below="@+id/inp_5"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inp_6"
                android:layout_below="@+id/btn6_input_5"
                android:textSize="18sp"
                android:text="@string/btn_inp_6_t4"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                />
            <EditText
                android:id="@+id/btn6_input_6"
                android:layout_width="match_parent"
                android:layout_below="@+id/inp_6"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inp_7"
                android:layout_below="@+id/btn6_input_6"
                android:textSize="18sp"
                android:text="@string/btn_inp_7_t4"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                />
            <EditText
                android:id="@+id/btn6_input_7"
                android:layout_below="@+id/inp_7"
                android:layout_width="match_parent"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_below="@+id/btn6_input_7"
                android:text="@string/btn_inp_8_t4"
                android:id="@+id/inp_8"
                />
            <EditText
                android:id="@+id/btn6_input_8"
                android:layout_below="@+id/inp_8"
                android:layout_width="match_parent"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_below="@+id/btn6_input_8"
                android:text="@string/btn_inp_9_t4"
                android:id="@+id/inp_9"
                />
            <EditText
                android:id="@+id/btn6_input_9"
                android:layout_below="@+id/inp_9"
                android:layout_width="match_parent"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_below="@+id/btn6_input_9"
                android:text="@string/btn_inp_10_t4"
                android:id="@+id/inp_10"
                />
            <EditText
                android:id="@+id/btn6_input_10"
                android:layout_below="@+id/inp_10"
                android:layout_width="match_parent"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_below="@+id/btn6_input_10"
                android:text="@string/btn_inp_11_t4"
                android:id="@+id/inp_11"
                />
            <EditText
                android:id="@+id/btn6_input_11"
                android:layout_below="@+id/inp_11"
                android:layout_width="match_parent"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_below="@+id/btn6_input_11"
                android:text="@string/btn_inp_12_t4"
                android:id="@+id/inp_12"
                />
            <EditText
                android:id="@+id/btn6_input_12"
                android:layout_below="@+id/inp_12"
                android:layout_width="match_parent"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_below="@+id/btn6_input_12"
                android:text="@string/btn_inp_13_t4"
                android:id="@+id/inp_13"
                />
            <EditText
                android:id="@+id/btn6_input_13"
                android:layout_below="@+id/inp_13"
                android:layout_width="match_parent"
                android:hint="@string/input_tint"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/inputs"
                android:layout_height="40dp"
                android:paddingLeft="20dp"/>
            <Button
                android:layout_marginTop="45dp"
                android:layout_marginBottom="45dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/my_button"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/button_dialog"
                android:textSize="15sp"
                android:layout_below="@id/btn6_input_13"
                android:onClick="fill_btn_6"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

